--- a/FUNewsManagement_RazorPages/Pages/Tags/Edit.cshtml
+++ b/FUNewsManagement_RazorPages/Pages/Tags/Edit.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 <div class="card-body">
                     <form method="post">
-                        <div asp-validation-summary="ModelOnly" class="alert alert-danger d-none"></div>
+                        <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
                         <input type="hidden" asp-for="Tag.TagId" />
 
                         <div class="mb-3">
